# baphomet-babes

./: .dockerignore  .env.example  .firebaserc  .gitignore  Cargo.toml  Dockerfile  firebase.json  firestore.rules  justfile
.github/workflows/: ci.yml  deploy-backend.yml  deploy-frontend.yml  deploy-hub.yml  test.yml
auth-client/: Cargo.toml
auth-client/src/: lib.rs  wasm.rs
backend/: Cargo.toml
backend/src/: app_check.rs  auth.rs  db.rs  error.rs  fcm.rs  lib.rs  main.rs  models.rs
backend/src/routes/: announcements.rs  auth.rs  calendar.rs  chat.rs  events.rs  invites.rs  mod.rs  notifications.rs  profile.rs  rides.rs  users.rs
backend/tests/: golden.rs  integration.rs  prop.rs
backend/tests/golden/: auth_response.json  error_response.json  event.json  invite_code.json  legacy_event_doc.json  legacy_profile_doc.json  legacy_ride_doc.json  profile.json
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/tests/: hub.spec.ts  mobile.spec.ts
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/public/: manifest.json
frontend/src/: api.rs  app.rs  context.rs  main.rs  theme.rs
frontend/src/components/: nav.rs
frontend/src/pages/: about.rs  admin.rs  history.rs  home.rs  login.rs  mod.rs  vote.rs
hub/: Cargo.toml  Trunk.toml  build.rs  index.html
hub/public/: firebase-messaging-sw.js  manifest.json  sw.js
hub/src/: api.rs  app.rs  cache.rs  main.rs  map.rs  push.rs  pwa.rs  theme.rs
hub/src/components/: admin_nav.rs  calendar_subscribe.rs  event_rsvp.rs  mod.rs  nav.rs  notify_onboard.rs
hub/src/pages/: about.rs  admin.rs  admin_announcements.rs  admin_broadcast.rs  admin_events.rs  admin_invites.rs  admin_users.rs  announcements.rs  chat.rs  home.rs  install.rs  login.rs  members.rs  mod.rs  movie_nights.rs  notifications.rs  profile.rs  rides.rs  vote.rs
infra/app-check/: README.md
infra/billing-killswitch/: README.md  main.py  requirements.txt  setup.sh
shared/src/: lib.rs
