[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
firestore = "0.49"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
rustls = { version = "0.23", features = ["ring"] }
argon2 = "0.5"
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.6", features = ["cors"] }
tower_governor = { version = "0.8", features = ["axum"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
shared = { path = "../shared" }

[dev-dependencies]
proptest = "1"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hyper = "1"
base64 = "0.22"
