[package]
name = "hub"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_router = { version = "0.7" }
gloo-net = { version = "0.6", features = ["http"] }
wasm-bindgen = "=0.2.122"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "HtmlInputElement", "Location", "Navigator", "Clipboard", "Storage", "MediaQueryList"] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shared = { path = "../shared" }
auth-client = { path = "../auth-client" }
thaw = "0.4.8"
